--- a/ex7.html
+++ b/ex7.html
@@ -1,12 +1,14 @@
-<a class="amazon" href="https://www.amazon.in/">Back to Amazon</a>
-<p class="name">Nike black running shoes</p>
-<p class="price">$39 -in stock.</p>
-<p class="delivery">Free delivery tomoorow</p>
-<button class="add-card">Add card</button>
-<button class="buy">Order Now</button>
-
-<style>
-    
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>HElo</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manufacturing+Consent&display=swap" rel="stylesheet">
+    <style>
+    p{
+        font-family: Manufacturing Consent;
+    }
     .amazon{
          font-size: 17px;
          color: rgb(35, 130, 137);
@@ -45,3 +47,14 @@
         cursor: pointer;
     }
 </style>
+    </head>
+    <body>
+<a class="amazon" href="https://www.amazon.in/">Back to Amazon</a>
+<p class="name">Nike black running shoes</p>
+<p class="price">$39 -in stock.</p>
+<p class="delivery">Free delivery tomoorow</p>
+<button class="add-card">Add card</button>
+<button class="buy">Order Now</button>
+    </body>
+</html>
+
